// Auxiliary ERD based on Custom_Keyboard_ERD.dbml.
// Purpose: keep the current project shape, but remove normalized layout tables
// and compatibility_rules to make a lighter refactor path.
//
// Removed from the original ERD:
// - layouts
// - case_layouts
// - pcb_layouts
// - plate_layouts
// - compatibility_rules
//
// Compatibility is checked in application/service logic:
// - cases.layout_code = pcbs.layout_code = plates.layout_code
// - cases.mount_type = pcbs.mount_type = plates.mount_type
// - pcbs.switch_mount must support switches.mount_type
// - keycap_sets.supported_layout_code and stabilizers.supported_layout_code
//   are optional coarse checks for kit-oriented data entry.

Table roles {
  role_id int [pk, increment]
  role_name varchar [unique]
  permissions varchar
}

Table users {
  user_id int [pk, increment]
  role_id int [not null, ref: > roles.role_id]
  username varchar [unique]
  email varchar [unique]
  phone varchar [unique]
  password_hash varchar
  is_active boolean
}

Table audit_log {
  log_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  table_name varchar
  record_id varchar
  action varchar
  old_value_json text
  new_value_json text
  changed_at datetime
}

Table brands {
  brand_id int [pk, increment]
  brand_name varchar [unique]
  country varchar
}

Table switches {
  switch_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  switch_technology varchar
  switch_type varchar
  actuation_force_g int
  mount_type varchar [not null]
  sound_profile varchar
  price_usd float
  is_available boolean
}

Table keycap_sets {
  keycap_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  supported_layout_code varchar
  supported_key_count int
  profile varchar
  material varchar
  color_primary varchar
  legend_type varchar
  price_usd float
  is_available boolean
}

Table cases {
  case_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  layout_code varchar [not null]
  form_factor varchar [not null]
  standard_key_count int [not null]
  material varchar
  mount_type varchar [not null]
  color varchar
  weight_g int
  price_usd float
  is_available boolean
}

Table pcbs {
  pcb_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  layout_code varchar [not null]
  form_factor varchar [not null]
  standard_key_count int [not null]
  pcb_technology varchar
  mount_type varchar [not null]
  hotswap boolean
  wireless boolean
  rgb boolean
  switch_mount varchar [not null]
  price_usd float
  is_available boolean
}

Table plates {
  plate_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  layout_code varchar [not null]
  form_factor varchar [not null]
  standard_key_count int [not null]
  material varchar
  mount_type varchar [not null]
  flex_cut varchar
  price_usd float
  is_available boolean
}

Table stabilizers {
  stab_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  supported_layout_code varchar
  sizes_included varchar
  stab_type varchar
  price_usd float
  is_available boolean
}

Table builds {
  build_id varchar [pk]
  user_id int [not null, ref: > users.user_id]
  case_id varchar [ref: > cases.case_id]
  pcb_id varchar [ref: > pcbs.pcb_id]
  plate_id varchar [ref: > plates.plate_id]
  switch_id varchar [ref: > switches.switch_id]
  keycap_id varchar [ref: > keycap_sets.keycap_id]
  stab_id varchar [ref: > stabilizers.stab_id]
  name varchar
  notes varchar
  status varchar
  total_cost_snapshot float
  created_at datetime
  updated_at datetime
}

Table build_mods {
  mod_id int [pk, increment]
  build_id varchar [not null, ref: > builds.build_id]
  mod_type varchar
  target_component varchar
  lube_type varchar
  is_filmed boolean
  spring_weight_g int
  notes varchar
}

Table seller_profiles {
  seller_profile_id int [pk, increment]
  user_id int [not null, ref: > users.user_id, unique]
  assigned_by_admin_id int [ref: > users.user_id]
  shop_name varchar
  phone varchar
  address varchar
  is_verified boolean
  verified_by_admin_id int [ref: > users.user_id]
  assigned_at datetime
  verified_at datetime
}

Table build_requests {
  request_id varchar [pk]
  build_id varchar [not null, ref: > builds.build_id]
  buyer_id int [not null, ref: > users.user_id]
  seller_user_id int [not null, ref: > users.user_id]
  request_payload_json text
  status varchar
  note varchar
  requested_at datetime
  accepted_at datetime
  completed_at datetime
  updated_at datetime
}

Table chat_conversations {
  conversation_id varchar [pk]
  seller_user_id int [not null, ref: > users.user_id]
  buyer_id int [ref: > users.user_id]
  admin_user_id int [ref: > users.user_id]
  build_request_id varchar [ref: > build_requests.request_id]
  created_at datetime
  updated_at datetime

  Note: 'Exactly one of buyer_id or admin_user_id must be set. Buyer-admin direct chat is not allowed.'
}

Table chat_messages {
  message_id varchar [pk]
  conversation_id varchar [not null, ref: > chat_conversations.conversation_id]
  sender_user_id int [not null, ref: > users.user_id]
  message_text text
  sent_at datetime
}
